@@ -18,7 +18,7 @@
     </span>
   </div>
 
-  <div class="table-responsive">
+  <div class="table-responsive" data-controller="datatable" data-datatable-money-columns-value="2,3,5">
 
     <table id="capital_distributions" class="table table-bordered  dataTable action_table jqDataTable">
       <thead>
