@@ -49,7 +49,7 @@
 
 <%= render "aggregate_portfolio_investments/stats",  aggregate_portfolio_investments:, fund: %>
 
-<div class="table-responsive" data-controller="datatable">
+<div class="table-responsive" data-controller="datatable" data-datatable-money-columns-value="6,7">
   <table id="aggregate_portfolio_investments" class="table table-bordered dataTable jqDataTable">
     <thead>
       <tr>
